--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -1,8 +1,8 @@
 .myBtn {
   padding: 5px 15px;
-  color: magenta;
+  color: blueviolet;
   font-style: 14px;
   background: transparent;
-  border: 1px solid magenta;
+  border: 1px solid blueviolet;
   cursor: pointer;
 }
